<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_tree_eut_plugins</name>
  <version>0.0.1</version>
  <description>Eurecat developed plugins to exploit BT.CPPv4 PUBLIC library for customized edit, monitor and enhancing tools</description>
  <maintainer email="devis.dalmoro@eurecat.org">Devis Dal Moro</maintainer>
  <maintainer email="david.calero@eurecat.org">David Calero</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>libzmq3-dev</depend>
  <depend>behaviortree_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
